--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
               </div>
               <div class="carousel-item">
                 <div class="carousel-caption">
-                  <h3>“Truly elegant design incorporates top-notch functionality into a simple, uncluttered form.” — David Lewis, Industrial Designer</h3>
+                  <h3>“Truly elegant design incorporates top-notch functionality into a simple, uncluttered form.” — David Lewis</h3>
               </div>
                 <img  class="img-fluid" alt="Responsive image" class="d-block w-100" src="carousal2.jpg" alt="Second slide">
               </div>
               <div class="carousel-item">
                 <div class="carousel-caption">
-                  <h3> “Good design is obvious. Great design is transparent.” — Joe Sparano, Designer and Teacher</h3>
+                  <h3> “Good design is obvious. Great design is transparent.” — Joe Sparano</h3>
               </div>
                 <img  class="img-fluid" alt="Responsive image"  class="d-block w-100" src="carousal3.jpg" alt="Third slide">
               </div>
